--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Tune Learning App</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Include ABCJS Audio CSS -->
-    <link rel="stylesheet" href="audio.css">
+    <link rel="stylesheet" href="abcjs-audio.css">
     <!-- Include ABCJS Plugin library -->
-    <script src="basic.js" type="text/javascript"></script>
+    <script src="abcjs-basic.js" type="text/javascript"></script>
     
 </head>
 
@@ -104,20 +104,18 @@
             <label for="metronome">Metronome:</label>
             <input type="checkbox" id="metronome">
         </div>
-        <!-- Play Button -->
+        <!-- Play and Stop Buttons -->
         <div class="control-group">
             <button id="play-button">Play</button>
+            <button id="stop-button">Stop</button>
         </div>
+
     </div>
     <!-- Progress Bar -->
     <div id="progress-bar">
         <!-- Progress bar with measure markings -->
         <canvas id="progress-canvas"></canvas>
     </div>
-    <script>
-        console.log('ABCJS:', ABCJS); // Should display the ABCJS object
-        console.log('ABCJS.renderAbc:', ABCJS.renderAbc); // Should be a function
-    </script>
     <script src="script.js"></script>
 </body>
 </html>
